# digital-seat-allocator

./: .gitignore  Cargo.toml  README.md  simulation.json
docs/: Struktur.drawio  ieee-with-url.csl  main.bib
docs/paper/: chapter-1.md  dsa-paper.md
src/: allocator.rs  data.rs  main.rs  passenger.rs  passengers.rs  request.rs  simulation.rs  train.rs
