[package]
name = "digital_seat_allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = {version= "1.0.156", features = ["derive"]}
serde_json = "1.0.94"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
